--- a/CompositionalLayouts-Sample/Base.lproj/Main.storyboard
+++ b/CompositionalLayouts-Sample/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v2m-2m-Orr">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" red="1" green="0.96323980159201983" blue="0.67887012270536018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="E8P-Ew-Gbd">
                                     <size key="itemSize" width="50" height="50"/>
@@ -32,13 +32,13 @@
                             <constraint firstItem="v2m-2m-Orr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ATN-ll-ffn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="v2m-2m-Orr" secondAttribute="trailing" id="JGc-Jb-ZVM"/>
                             <constraint firstItem="v2m-2m-Orr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Yri-uU-yt5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="v2m-2m-Orr" secondAttribute="bottom" id="v0T-Sv-V3i"/>
+                            <constraint firstAttribute="bottom" secondItem="v2m-2m-Orr" secondAttribute="bottom" id="v0T-Sv-V3i"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="CompositionalLayouts-Sample" id="mtL-se-zWi"/>
                     <connections>
-                        <outlet property="cv" destination="v2m-2m-Orr" id="iOj-g7-Nuq"/>
+                        <outlet property="collectionView" destination="v2m-2m-Orr" id="iOj-g7-Nuq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
