--- a/CompositionalLayouts-Sample/View/CollectionViewCell.xib
+++ b/CompositionalLayouts-Sample/View/CollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,21 +16,29 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qNi-uu-CFA">
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0B-09-Ghj">
-                        <rect key="frame" x="4" y="14.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="3.5" y="29.5" width="43.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Q0B-09-Ghj" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="dqU-ob-EK0"/>
+                <constraint firstItem="qNi-uu-CFA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="BcQ-ua-X44"/>
+                <constraint firstItem="Q0B-09-Ghj" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" multiplier="1.6" id="dqU-ob-EK0"/>
                 <constraint firstItem="Q0B-09-Ghj" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="trP-hl-Cy7"/>
+                <constraint firstAttribute="trailing" secondItem="qNi-uu-CFA" secondAttribute="trailing" id="v9q-YR-zxY"/>
+                <constraint firstAttribute="bottom" secondItem="qNi-uu-CFA" secondAttribute="bottom" id="vZV-vV-acf"/>
+                <constraint firstItem="qNi-uu-CFA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wDQ-bW-O3E"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
+                <outlet property="imageView" destination="qNi-uu-CFA" id="AZZ-N4-1Ko"/>
                 <outlet property="label" destination="Q0B-09-Ghj" id="dEB-g5-16x"/>
             </connections>
             <point key="canvasLocation" x="139" y="118"/>
